testsuite/tests/properties/warn_public_doc/test.out
test.py:24: error: This property is public but it lacks documentation
test.py:30: error: This property is public but it lacks documentation
Code generation was successful
Done
